@@ -62,9 +62,9 @@ Fits a density surface model (DSM) to detection adjusted counts from a spatially
 \details{
 The response (LHS of `formula`) can be one of the following:
 \tabular{ll}{
-  \code{n}, \code{count}, \code{N} \tab count in each segment\cr
-  \code{Nhat}, \code{abundance.est} \tab estimated abundance per segment, estimation is via a Horvitz-Thompson estimator. This should be used when there are covariates in the detection function.\cr
-  \code{D}, \code{density}, \code{Dhat}, \code{density.est} \tab density per segment\cr
+  \code{count} \tab count in each segment\cr
+  \code{abundance.est} \tab estimated abundance per segment, estimation is via a Horvitz-Thompson estimator. This should be used when there are covariates in the detection function.\cr
+  \code{density.est} \tab density per segment\cr
  }
 
 The offset used in the model is dependent on the response:
