@@ -47,16 +47,16 @@ test_that("Density weighting",{
 
   # setting weights to 1 or another constant
   # compare when we set the weights
-  mod1.w1 <- dsm(density~s(x,y), hn.model, segdata, obsdata,
+  mod1.w1 <- dsm(density.est~s(x,y), hn.model, segdata, obsdata,
                  weights=rep(1,nrow(segdata)))
   # compare when we set the weights
-  mod1.w2 <- dsm(density~s(x,y), hn.model, segdata, obsdata,
+  mod1.w2 <- dsm(density.est~s(x,y), hn.model, segdata, obsdata,
                  weights=rep(100,nrow(segdata)))
 
   expect_equal(fitted(mod1.w1),fitted(mod1.w2),tolerance=par.tol)
 
   # scalar input of weights (same as weighting all as 1, or 10)
-  mod1.ws1 <- dsm(density~s(x,y), hn.model, segdata, obsdata,
+  mod1.ws1 <- dsm(density.est~s(x,y), hn.model, segdata, obsdata,
                 weights=1)
 
   expect_equal(fitted(mod1.ws1),fitted(mod1.w2),tolerance=par.tol)
@@ -67,7 +67,7 @@ test_that("Density weighting",{
 
 test_that("Density predictions",{
   # test predictions
-  mod1 <- dsm(density~s(x,y), hn.model, segdata, obsdata, family=gaussian())
+  mod1 <- dsm(density.est~s(x,y), hn.model, segdata, obsdata, family=gaussian())
 
   # off.set=1 should be the same as newdata$off.set=1 and not supplying offset
   preddata$off.set <- 1
